task-1 solution problem 1 added

--- a/task1-solution.ipynb
+++ b/task1-solution.ipynb
@@ -15,11 +15,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9b1ffcee-6076-473a-9f9c-f40216bbaa9b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your CTC in Lakhs:  12\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Salary Breakdown -----\n",
+      "Annual Salary: ₹1200000.0\n",
+      "HRA Deduction (10%): ₹120000.0\n",
+      "DA Deduction (5%): ₹60000.0\n",
+      "PF Deduction (3%): ₹36000.0\n",
+      "Tax (20%): ₹240000.0\n",
+      "In-hand Monthly Salary: ₹62000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Program to calculate in-hand monthly salary from CTC\n",
+    "ctc = float(input(\"Enter your CTC in Lakhs: \"))\n",
+    "\n",
+    "# Convert lakhs to rupees\n",
+    "annual_salary = ctc * 100000\n",
+    "\n",
+    "# Deductions\n",
+    "hra = 0.10 * annual_salary\n",
+    "da = 0.05 * annual_salary\n",
+    "pf = 0.03 * annual_salary\n",
+    "\n",
+    "# Tax calculation based on slabs\n",
+    "if ctc < 5:\n",
+    "    tax_percent = 0\n",
+    "elif ctc <= 10:\n",
+    "    tax_percent = 10\n",
+    "elif ctc <= 20:\n",
+    "    tax_percent = 20\n",
+    "else:\n",
+    "    tax_percent = 30\n",
+    "\n",
+    "tax_amount = (tax_percent / 100) * annual_salary\n",
+    "\n",
+    "# In-hand annual salary\n",
+    "inhand_annual = annual_salary - (hra + da + pf + tax_amount)\n",
+    "\n",
+    "# Monthly salary\n",
+    "monthly_salary = inhand_annual / 12\n",
+    "\n",
+    "print(\"----- Salary Breakdown -----\")\n",
+    "print(f\"Annual Salary: ₹{annual_salary}\")\n",
+    "print(f\"HRA Deduction (10%): ₹{hra}\")\n",
+    "print(f\"DA Deduction (5%): ₹{da}\")\n",
+    "print(f\"PF Deduction (3%): ₹{pf}\")\n",
+    "print(f\"Tax ({tax_percent}%): ₹{tax_amount}\")\n",
+    "print(f\"In-hand Monthly Salary: ₹{monthly_salary}\")"
+   ]
   },
   {
    "cell_type": "code",
