task-1 solution problem 2 added

--- a/task1-solution.ipynb
+++ b/task1-solution.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9b1ffcee-6076-473a-9f9c-f40216bbaa9b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your CTC in Lakhs:  12\n"
@@ -80,11 +80,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "a73c443d-44f7-494b-82ea-e963d66cf4b4",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Problem 2: Write a program that take a user input of three angles and will find out whether it can form a triangle or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8efa1c71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter angle 1:  180\n",
+      "Enter angle 2:  90\n",
+      "Enter angle 3:  50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The angles do NOT form a triangle.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Program to check if three angles form a triangle\n",
+    "\n",
+    "a = float(input(\"Enter angle 1: \"))\n",
+    "b = float(input(\"Enter angle 2: \"))\n",
+    "c = float(input(\"Enter angle 3: \"))\n",
+    "\n",
+    "# Check triangle condition\n",
+    "if a > 0 and b > 0 and c > 0 and (a + b + c == 180):\n",
+    "    print(\"The angles form a valid triangle.\")\n",
+    "else:\n",
+    "    print(\"The angles do NOT form a triangle.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3543932f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10886bd4",
+   "metadata": {},
    "source": []
   },
   {
